# ExchatgeDesktopClient

./: .gitignore  CMakeLists.txt  Dockerfile  LICENSE  Readme.md  buildDependencies.sh  buildDependencies2.sh  buildDependenciesLocal.sh  docker-compose.yml  export.sh  extract.sh  main.c  options.txt
src/: conversationMessage.c  conversationMessage.h  crypto.c  crypto.h  defs.c  defs.h  lifecycle.c  lifecycle.h  logic.c  logic.h  main.c  net.c  net.h  nuklear.h  options.c  options.h  queue.c  queue.h  render.c  render.h  user.c  user.h
src/collections/: CMakeLists.txt  list.c  list.h  queue.c  queue.h
src/database/: CMakeLists.txt  database.c  database.h  sqlite3proxy.h
src/render/: CMakeLists.txt  nuklearDefs.h  render.c  render.h  strings.c  strings.h  xnuklear.c  xnuklear.h  xnuklearDefs.h
src/utils/: CMakeLists.txt  rwMutex.c  rwMutex.h
test/: collections.h  main.c  testCollections.c  testCollections.h  testCrypto.c  testCrypto.h  testMain.c  testNet.c  testNet.h  testRender.c  testRender.h
